style/index.css
body {
  background-color: rgb(233, 233, 233);
  height: 400%;
  margin: 0;
}

p {
  margin: 0;
}

h1 {
  font-family: Maven Pro, Arial;
  font-size: 300%;
  padding-left: 20%;
  margin-bottom: -5px;
}

h1::first-letter {
  font-size: 130%;
}

hr {
  border: 0;
  height: 1px;
  width: 75%;
  background: #333;
  margin-bottom: 20;
  background-image: linear-gradient(to right, #ccc, #333, #ccc);
}

.center {
  /* width: 45%; */
  display: table;
  margin: 0 auto;
}

.name-text {
  font-family: Cantarell, Arial;
  font-size: 450%;
  animation: 1s ease 0s normal forwards 1 fadein-name;
}

#large-letter{
  font-size: 130%;
  margin-right: -0.25em;
}

.name-text.first {
  margin-bottom: -50px;
  margin-right: 0.25em;
}

.name-container {
  margin-top: 200px;
  margin-bottom: -20px;
  /* flex-wrap: wrap; */
  /* justify-content: center; */
  /* display: flex; */
}

.motto-text {
  text-align: center;
  font-family: Cantarell, Arial;
  font-size: 200%;
  margin-bottom: -20px;
}

.motto-text.first {
  animation: 3s ease 0s normal forwards 1 fadein-motto-top;
  margin-bottom: -5;
}

.motto-text.second {
  animation: 3s ease 0s normal forwards 1 fadein-motto-bottom;
}

.meet-me {
  margin-top: 28%;
  padding-top: 2px;
  padding-bottom: 2px;
  background-color: rgb(215, 215, 215);
}

.meet-me-text-frame {
  display: flex;
}

.meet-me-container {
  width: 70%;
  margin: auto;
  margin-bottom: 20;
  display: flex;
}

/* Not sure why, but this is needed for IE.*/
.meet-me-container > img {
  min-width: 45%;
}

.meet-me-container > p {
  font-family: Maven Pro, Arial;
  margin-left: 10;
  float: left;
}

.meet-me-text-container {
  font-family: Maven Pro, Arial;
}

.meet-me-text-container > p {
  padding-bottom: 20;
}

.meet-me-text-container > h2 {
  font-family: Cantarell, Arial;
}

.occupation-container {
  width: 70%;
  margin: auto;
  margin-bottom: 20;
  display: flex;
  flex-wrap: wrap;
}

.occupation-image {
  margin-right: 5;
  margin-left: 5;
  margin-top: 5;
  margin-bottom: 5;
  position: relative;
}

.occupation-image-overlay {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  height: 100%;
  width: 100%;
  opacity: 0;
  transition: .5s ease;
  background-color: rgb(233, 233, 233);
  display: flex;
  justify-content: center;
  align-items: center;
}

.occupation-text {
  font-family: Maven Pro, Arial;
  font-size: 175%;
  text-align: center;
}

.occupation-image:hover .occupation-image-overlay {
  opacity: 1;
}

.image {
  display: block;
  width: 100%;
  height: auto;
}

#text-align-right {
  text-align: right;
  margin-right: 10;
}

#text-align-left {
  text-align: left;
  margin-left: 10;
}

.my-work {
  padding-top: 2px;
  padding-bottom: 2px;
}

@keyframes fadein-name{
    0% { opacity: 0; }
    100% { opacity: 1; }
}

@keyframes fadein-motto-top{
    0% { opacity: 0; }
    33% { opacity: 0; }
    66% { opacity: 1; }
    100% { opacity: 1; }
}

@keyframes fadein-motto-bottom{
    0% { opacity: 0; }
    66% { opacity: 0; }
    100% { opacity: 1; }
}

